--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+*{
+  background-color: rgb(46, 46, 46);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.main{
+  width:100%;
+  height:100vh;
+  display:flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.content{
+  width:60%;
+  height:30vh;
+  padding: 10px;
+}
+.taginput{
+  width:auto;
+  height:auto;
+  background-color: black;
+  border:1px solid rgb(75, 75, 75);
+  border-radius: 4px;
+}
+.taginput:focus-within{
+  border: 1px solid rgb(32, 32, 38);
+}
+.taginput input{
+  background-color: transparent;
+  border: none;
+  outline: none;
+  width:100%;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.taginput button{
+  color: rgb(0, 11, 50);
+  background-color: rgb(255, 254, 240);
+  border-radius: 4px;
+  padding: 3px;
+  margin: auto;
 }
